fixing spacing on mobile error

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 html {
   font-family: "Inter", sans-serif;
   background-color: rgba(210, 180, 140, 0.137);
+  overflow-x: hidden;
 }
 code,
 .terminal {
@@ -16,8 +17,9 @@ code,
 }
 body {
   margin: 0;
-  padding: 0 2em;
+  padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 h1,
 h2 {
@@ -47,18 +49,13 @@ p {
 }
 header,
 section {
-  width: min(1600px, 92%);
-  margin: auto;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
   padding: clamp(1rem, 3vw, 3rem);
   border-radius: 1em;
 }
-:root {
-  --primary: #87ae73;
-  --primary-light: rgba(135, 174, 115, 0.1);
-  --primary-dark: #6f8f5d;
-  --text-main: #111;
-  --text-muted: #555;
-}
+
 /*navigation bar*/
 nav {
   overflow: visible;
@@ -602,6 +599,19 @@ main img {
     justify-content: flex-end;
     padding: 1rem 2rem;
   }
+  .flip-card {
+    width: 100%;
+    max-width: 320px;
+  }
+
+  .contact-left img {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .terminal {
+    width: 100%;
+  }
 }
 /*footer*/
 .footer {
@@ -991,7 +1001,7 @@ body {
   padding: 1.5rem 2rem;
   background: rgba(135, 174, 115, 0.07);
   backdrop-filter: blur(10px);
-  max-width: 550px;
+  max-width: 580px;
   margin: 0 auto;
   border-left: 5px solid #87ae73d0;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.06);
@@ -1050,7 +1060,7 @@ body {
 }
 
 .portland-img {
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   right: 50%;
